added prompt chapter

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,17 @@
+@article{Hardie2012,
+  doi = {10.5130/ajceb.v9i1.3009},
+  url = {https://doi.org/10.5130/ajceb.v9i1.3009},
+  year = {2012},
+  month = nov,
+  publisher = {University of Technology,  Sydney ({UTS})},
+  volume = {9},
+  number = {1},
+  pages = {1--8},
+  author = {Mary Hardie and Swapan Saha},
+  title = {Builders{\textquotesingle} Perceptions of Lowest Cost Procurement and Its Impact on Quality},
+  journal = {Construction Economics and Building}
+}
+
 @article{gencay2023chatgpt,
   title={ChatGPT Guide for Data Scientists: Top 40 Most Important Prompts},
   author={Gencay, I.},
