added preface 및 book structure

--- a/gpt_python.qmd
+++ b/gpt_python.qmd
@@ -5,7 +5,7 @@ editor_options:
 ---
 
 
-# 챗GPT 환경 구축
+# 챗GPT 환경 구축 {#sec-gpt}
 
 챗GPT 데이터 과학 환경을 구축하기 위해서는 파이썬 설치, 가상환경 설정, `.Rprofile` 설정 등 사전 작업이 필요하다. 쿼토를 통해 감성 분석을 수행하기에 앞서, 이와 같은 환경 구축 작업을 선행함으로써 안정적이고 효율적인 분석 환경을 마련할 수 있다. 체계적인 사전 준비를 통해 원활한 분석 수행이 가능해진다.
 
