added many models case study

--- a/models_case_study.qmd
+++ b/models_case_study.qmd
@@ -7,13 +7,13 @@ editor:
 ---
 
 
-# 사례: 시군 인구증가 {#r-population-growth}
+# 사례: 시군 인구증가 {#sec-population-growth}
 
-통계청에서 제공하는 연도별 인구데이터를 바탕으로 2005년부터 2016년까지 인구변동 데이터를 바탕으로 
-시군별 인구변동에 대해 이해한다.
+통계청에서 제공하는 연도별 인구데이터를 바탕으로 2005년부터 2016년까지 인구변동 데이터를 바탕으로 시군별 인구변동에 대해 이해한다.
 
-[국가통계포털, KOSIS](http://kosis.kr/)에서 "통계표" 검색창에 "도시지역 인구현황(시군구)" 입력하게 되면 
-2005년부터 2016까지 시군구별 인구데이터를 받아올 수 있다. [직접 다운로드 링크](http://kosis.kr/statHtml/statHtml.do?orgId=315&tblId=TX_315_2009_H1001&vw_cd=&list_id=315_31502_008&seqNo=&lang_mode=ko&language=kor&obj_var_id=&itm_id=&conn_path=MT_ZTITLE)
+[국가통계포털, KOSIS](http://kosis.kr/)에서 "통계표" 검색창에 "도시지역 인구현황(시군구)" 입력하게 되면 2005년부터 2016까지 시군구별 인구데이터를 받아올 수 있다. [직접 다운로드 링크](https://kosis.kr/statHtml/statHtml.do?orgId=460&tblId=TX_315_2009_H1001&vw_cd=MT_ZTITLE&list_id=315_31502_008&seqNo=&lang_mode=ko&language=kor&obj_var_id=&itm_id=&conn_path=MT_ZTITLE)
+
+![국가통계포털에서 다운받은 전체기간 도시지역 인구현황(시군구) 데이터](images/kosis_excel.jpg){#fig-kosis-excel}
 
 ## 인구변동이 많은 시군 {#r-population-by-sigun}
 
@@ -24,62 +24,62 @@ editor:
 서울특별시를 포함한 광역시에 포함된 군은 데이터 분석에 제외할 것이기 때문에 `stringr` 정규표현식 기능을 
 활용하여 깔끔하게 향후 데이터분석을 위한 데이터프레임으로 정리한다.
 
-``` {r r-population-growth-data}
+``` {r}
+#| label: r-population-growth-data
 # 0. 환경설정 -----------
 library(tidyverse)
 library(readxl)
-library(ggpubr)
-extrafont::loadfonts()
 
 # 1. 데이터 가져오기 ---------
 
-kor_dat <- read_excel("data/korea-pop-zipf-law.xlsx", sheet="데이터", skip=1) 
-
-kor_dat <- kor_dat %>% 
-  filter(`소재지(시군구)별` !="전국") %>% 
-  filter(`인구현황별` =="전체인구(A)")
+kor_raw <- read_excel("data/도시지역_인구현황_시군구__20240331111602.xlsx", sheet="데이터", skip=0) 
 
 # 2. 데이터 전처리 ---------
-## 2.1. 시군 뽑아내기 -------
+kor_tbl <- kor_raw %>% 
+  # 변수명 정리
+  janitor::clean_names(ascii = FALSE) |> 
+  # 2 행으로 구성된 칼럼 정리
+  slice(2:n()) |> 
+  # 연도별 인구수 자료 구조 변환
+  pivot_longer(cols = starts_with("x"), names_to = "연도", values_to = "인구수") |> 
+  # 변수명 확정
+  set_names(c("시도명", "시군구", "연도", "인구수")) |> 
+  # 결측값 채워넣기
+  fill(시도명) |>
+  # 시군구 중복, 소계 제거
+  filter(시군구 != "소계") |> 
+  filter(!시군구 %in% c("강원도", "경기도", "경상남도", "경상북도", "광주광역시", 
+                     "대구광역시", "대전광역시", "부산광역시", "서울특별시", 
+                     "세종특별자치시", "울산광역시", "인천광역시", 
+                     "전라남도", "전라북도", "제주특별자치도", "충청남도", "충청북도")) |> 
+  # 자료형 변환
+  mutate(연도 = parse_number(연도),
+         인구수 = parse_number(인구수)) |> 
+  # 2005년 인구 데이터만 있음 -- 제거 
+  filter(!시군구 %in% c("북제주군", "남제주군"))
 
-sigungu_v <- kor_dat %>% count(`소재지(시군구)별`) %>% 
-  pull(`소재지(시군구)별`)
 
-sigungu_v <- sigungu_v[str_detect(sigungu_v, "시$|군$")]
-
-## 2.2. 시군 데이터 전처리 -------
-
-kor_df <- kor_dat %>% 
-  filter(`소재지(시군구)별` %in% sigungu_v) %>% 
-  filter(!is.na(`2016 년`)) %>% group_by(`소재지(시군구)별`) %>% 
-  summarise_if(is.numeric, mean) %>% 
-  rename(시군 = `소재지(시군구)별`)
-
-## 2.3. 시각화 데이터 변환  -------
-kor_lng_df <- kor_df %>% 
-  gather(연도, 인구수, -시군) %>% 
-  mutate(연도 = as.numeric(str_extract(연도, "[0-9]+")))
+kor_tbl
 ```
 
 ## 문제점 {#r-population-by-sigun-problem}
 
-대한민국 시군이 `r nrow(kor_df)` 이기 때문에 인구변동이 많은 시군을 추출하기 위해서 
-서울시는 천만명 근처이고 가장 작은 울릉군은 2016년 기준 10,001 명이라 편차가 매우 크다.
+대한민국 시군구이 `r kor_tbl |> count(시도명, 시군구) |> nrow()` 이기 때문에 인구변동이 많은 시군을 추출하기 위해서 
+수도권 시군구는 백만명 근처이고 가장 작은 울릉군은 2016년 기준 10,001 명이라 편차가 매우 크다.
 따라서, 이를 시각화를 하게 되면 문제점이 한눈에 파악된다.
 
-``` {r r-population-growth-problem}
+``` {r}
+#| label: r-population-growth-problem
 # 3. 시각화 ----------------
 ## 3.1. 시군별 연도별 인구수 변화
-kor_lng_df %>% 
-  mutate(연도 = make_date(year=연도)) %>% 
-  ggplot(aes(x=연도, y=인구수, color=시군, group=시군)) +
+kor_tbl %>% 
+  ggplot(aes(x=연도, y=인구수, color=시군구, group=시군구)) +
     geom_point() +
     geom_line() +
-    theme_pubclean(base_family="NanumGothic") +
+    theme_minimal() +
     scale_y_log10(labels=scales::comma) +
-    scale_x_date(date_labels = "%Y") +
     theme(legend.position = "none") +
-    labs(x="", y="인구수", title="시군 인구수 년도별 변화(2005 - 2016)")
+    labs(x="", y="인구수", title="시군 인구수 년도별 변화(2005 - 2022)")
 ```
 
 ## FP 통한 문제해결 {#r-population-by-sigun-solution}
@@ -99,7 +99,8 @@ kor_lng_df %>%
 ``` {r r-population-growth-list-column}
 # 4. 인구변화 심한 시군 추출 ----------------
 ## 4.1. 데이터 
-kor_sigun_tb <- kor_lng_df %>% group_by(시군) %>% 
+kor_sigun_tbl <- kor_tbl %>% 
+  group_by(시도명, 시군구) %>% 
   nest()
 
 ## 4.2. 모형 - 선형회귀모형
@@ -108,16 +109,21 @@ sigun_model <- function(df) {
 }
 
 ## 4.3. 데이터 + 모형 결합
-kor_sigun_tb <- kor_sigun_tb %>% 
+kor_sigun_mod <- kor_sigun_tbl %>% 
   mutate(model = map(data, sigun_model)) %>% 
   mutate(
     tidy    = map(model, broom::tidy),
     glance  = map(model, broom::glance),
     결정계수 = glance %>% map_dbl("r.squared"),
-    augment = map(model, broom::augment)
-  )
+    augment = map(model, broom::augment),
+    회귀계수    = map(tidy, ~ .x %>% filter(term == "연도") %>% select(estimate)) 
+  ) |> 
+  mutate(회귀계수 = map_dbl(회귀계수, ~ .x %>% pull(estimate))) |> 
+  ungroup()
 
-DT::datatable(kor_sigun_tb)
+kor_sigun_mod |> 
+  select(시도명, 시군구, 결정계수, 회귀계수) |> 
+  arrange(desc(결정계수))
 ```
 
 ### 급성장 시군 - 결정계수($R^2$) {#r-population-by-sigun-solution-rsquare}
@@ -127,33 +133,36 @@ DT::datatable(kor_sigun_tb)
 ``` {r r-population-growth-by-sigun-viz}
 ## 4.4. 고성장 및 정체 시군 추출
 
-kor_high_growth_sigun_tb <- kor_sigun_tb %>% 
+positive_growth_sigun_tbl <- kor_sigun_mod %>% 
+  filter(회귀계수 > 0) |> 
   top_n(5, 결정계수) %>% 
   unnest(data) %>% 
-  mutate(구분="고성장")
+  mutate(구분="급성장")
 
-kor_low_growth_sigun_tb <- kor_sigun_tb %>% 
-  top_n(-5, 결정계수) %>% 
+negative_growth_sigun_tbl <- kor_sigun_mod %>% 
+  filter(회귀계수 < 0) |> 
+  top_n(5, 결정계수) %>% 
   unnest(data) %>% 
-  mutate(구분="저성장")
+  mutate(구분="역성장")
 
-kor_growth_sigun_tb <- bind_rows(kor_high_growth_sigun_tb, kor_low_growth_sigun_tb)
+growth_sigun_tbl <- bind_rows(positive_growth_sigun_tbl, negative_growth_sigun_tbl)
+
+negative_growth_sigun_tbl |> tail()
 
 ## 4.5. 고성장 및 정체 시군 시각화
 
-kor_growth_sigun_tb %>% 
-  mutate(구분 = factor(구분),
-         시군 = fct_reorder(시군, 결정계수)) %>% 
+growth_sigun_tbl %>% 
+  mutate(구분 = factor(구분)) %>% 
   mutate(연도 = make_date(year=연도)) %>% 
-  ggplot(aes(x=연도, y=인구수, color=구분, group=시군)) +
-  geom_point() +
-  geom_line() +
-  theme_pubclean(base_family="NanumGothic") +
-  scale_y_log10(labels=scales::comma) +
-  theme(legend.position = "none") +
-  facet_wrap(~시군, nrow=2, scale="free") +
-  labs(x="", y="인구수", title="시군 인구수 년도별 변화(2005 - 2016)") +
-  scale_x_date(date_labels = "%Y")
+  ggplot(aes(x=연도, y=인구수, color=구분, group=시군구)) +
+    geom_point() +
+    geom_line() +
+    theme_minimal() +
+    scale_y_log10(labels=scales::comma) +
+    theme(legend.position = "none") +
+    facet_wrap(구분~시군구, nrow=2, scale="fixed") +
+    labs(x="", y="인구수", title="시군구 인구수 년도별 변화(2005 - 2022)") +
+    scale_x_date(date_labels = "%Y")
 ```
 
 ### 급성장 시군 - 회귀계수 {#r-population-by-sigun-solution-coefficent}
@@ -161,7 +170,9 @@ kor_growth_sigun_tb %>%
 회귀분석 결정계수($R^2$)기준이 아닌 회귀계수($\beta_1$)를 기준으로 상위 5개, 하위 5개 시군을 뽑아 
 연도별 인구변화를 시각화해보자.
 
-``` {r r-population-growth-by-sigun-viz-coefficient}
+``` {r}
+#| eval: false
+#| label: r-population-growth-by-sigun-viz-coefficient
 
 # 5. 인구 증가 및 인구감소 ----------------
 kor_sigun_reg_df <- kor_sigun_tb %>% 
