--- a/models_case_study.qmd
+++ b/models_case_study.qmd
@@ -6,21 +6,42 @@ editor:
     wrap: 72
 ---
 
-
 # 사례: 시군구 소멸 {#sec-population-growth}
 
-통계청에서 제공하는 연도별 인구데이터를 바탕으로 2005년부터 2022년까지 인구변동 데이터를 바탕으로 시군별 인구변동에 대해 이해한다.
+현시점 지방소멸 문제는 저출산, 고령화, 수도권 인구 집중 등으로 인해 지방
+지자체 인구가 급속히 감소하고 있다. 이로 인해 지방 경제가 침체되고, 지역
+공동체가 와해되는 등 다양한 사회적 문제가 야기되고 있다.
 
-[국가통계포털, KOSIS](http://kosis.kr/)에서 "통계표" 검색창에 "도시지역 인구현황(시군구)" 입력하게 되면 2005년부터 2016까지 시군구별 인구데이터를 받아올 수 있다. [직접 다운로드 링크](https://kosis.kr/statHtml/statHtml.do?orgId=460&tblId=TX_315_2009_H1001&vw_cd=MT_ZTITLE&list_id=315_31502_008&seqNo=&lang_mode=ko&language=kor&obj_var_id=&itm_id=&conn_path=MT_ZTITLE)
+인구 증감률 분석, 고령화 지수 분석, 합계출산율 분석, 인구 구조 분석,
+인구 이동 분석 등을 통해 인구 소멸 위험이 높은 시군구를 파악하여 지방
+소멸 문제에 선제적으로 대응할 수 있는 정책을 수립하는 데에 활용할 수
+있다.
 
-![국가통계포털에서 다운받은 전체기간 도시지역 인구현황(시군구) 데이터](images/kosis_excel.jpg){#fig-kosis-excel}
+통계청에서 제공하는 연도별 인구데이터를 바탕으로 2005년부터 2022년까지
+인구변동 데이터를 바탕으로 시군별 인구변동을 확인해 보자. [국가통계포털,
+KOSIS](http://kosis.kr/)에서 "통계표" 검색창에 "도시지역
+인구현황(시군구)" 입력하게 되면 2005년부터 2016까지 시군구별
+인구데이터[^models_case_study-1]를 받아올 수 있다.
 
+[^models_case_study-1]: 도시지역 인구현황(시군구) [다운로드
+    링크](https://kosis.kr/statHtml/statHtml.do?orgId=460&tblId=TX_315_2009_H1001&vw_cd=MT_ZTITLE&list_id=315_31502_008&seqNo=&lang_mode=ko&language=kor&obj_var_id=&itm_id=&conn_path=MT_ZTITLE)
 
-통계청 KOSIS에서 시군구별 인구데이터를 다운로드하고 전처리한다. 
-시군구 간 인구 편차가 큰 문제를 파악하고, 이를 해결하기 위해 티블 자료구조와 함수형 프로그래밍을 도입한다.
-시군구별로 선형회귀모형을 적용하고 broom 패키지를 사용하여 데이터와 모형 결과를 결합한다.
-급성장/역성장 시군구를 파악하기 위해 결정계수와 회귀계수를 기준으로 상위/하위 5개 시군구를 추출한다.
-마지막으로 급성장/역성장 시군구의 인구 변화를 시각화하여 결과를 분석한다.
+csv, txt, xlsx/xls, sdmx 등 다양한 형식으로 데이터를 다운로드 받을 수
+있으며, 이 중 xlsx 형식의 데이터를 다운로드 받아 사용한다. `sdmx` 파일
+형식이 UN, OECD, ILO, WHO 등 다양한 국제기구에서 자료제공 표준으로
+자리잡고 있어 [`rsdmx`](https://github.com/opensdmx/rsdmx) 패키지를 통해
+데이터를 불러올 수 있다. 시군구별 도시지역 인구현황을 전체기간에 걸쳐
+엑셀로 다운로드 받게 되면 wide 형식 데이터와 소계, 총계 등 집계가 포함된
+것이 확인된다.
+
+![국가통계포털에서 다운받은 전체기간 도시지역 인구현황(시군구)
+데이터](images/kosis_excel.jpg){#fig-kosis-excel fig-align="center"
+width="679"}
+
+통계청 KOSIS에서 제공되는 시군구와 시점이 확인되어 인구데이터를 확보하고 
+시군구별 인구변동 분석 작업을 수행한다.
+통계청 KOSIS에서 확보된 시군구별 인구데이터를 전처리한다. 탐색적 데이터분석을 통해 시군구간 인구 편차가 큰 문제를 파악하고, 이를 해결하기 위해 티블 자료구조와 함수형 프로그래밍을 도입하여 해결한다. 시군구별로 선형회귀모형을 적용하고 `broom` 패키지를 사용하여 데이터와 모형 결과를 결합한다. 특히, 급성장/역성장 시군구를 파악하기 위해 결정계수와 회귀계수를 기준으로 상위/하위 5개 시군구를 추출한다. 마지막으로 급성장/역성장 시군구 인구 변화를 시각화하여
+결과분석을 마무리한다.
 
 ```{mermaid}
 graph LR
@@ -65,22 +86,22 @@ graph LR
    style 시각화 fill:#f0f0f0,stroke:#333,stroke-width:2px
 ```
 
-
 ## 시군구 인구변동 {#r-population-by-sigun}
 
-인구변동이 많은 시군 통계 분석을 위해 필요한 팩키지를 불러 읽어온다.
-통계청 KOSIS에서 다운로드 받은 파일을 `data` 폴더 아래 저장하고 나서, 전처리 작업을 수행한다.
-서울특별시를 포함한 광역시에 포함된 군은 데이터 분석에 제외할 것이기 때문에 `stringr` 정규표현식 기능을 
-활용하여 깔끔하게 향후 데이터분석을 위한 데이터프레임으로 정리한다.
+인구변동이 많은 시군구 통계 분석을 위해 필요한 팩키지를 불러 읽어온다.
+통계청 KOSIS에서 다운로드 받은 파일을 `data` 폴더 아래 저장하고 나서,
+전처리 작업을 수행한다. 
+`kor_raw` 데이터프레임에서 시작하여 `janitor` 패키지 `clean_names()` 함수를 사용하여 
+변수명을 정리한다. `slice(2:n())` 함수를 사용하여 2행으로 구성된 칼럼을 정리하고, `pivot_longer()` 함수를 사용하여 연도별 인구수 자료구조를 변환한다. 
+열 이름은 "연도", 값은 "인구수"로 지정한다. `set_names()` 함수를 사용하여 변수명을 "시도명", "시군구", "연도", "인구수"로 확정하고, `fill()` 함수를 사용하여 시도명 결측값을 채워넣는다. `filter()` 함수를 사용하여 시군구가 "소계"인 행을 제거하고, 또 다른 `filter()` 함수를 사용하여 시군구가 특정 값(강원도, 경기도 등)에 속하지 않는 행을 제거한다. `mutate()` 함수를 사용하여 연도와 인구수 변수의 자료형을 숫자로 변환한다. 마지막으로 `filter()` 함수를 사용하여 시군구가 "북제주군"이나 "남제주군"이 아닌 행만 선택한다. 이유는 2005년 인구 데이터만 있기 때문에 제거한다.
 
-``` {r}
+```{r}
 #| label: r-population-growth-data
 # 0. 환경설정 -----------
 library(tidyverse)
 library(readxl)
 
 # 1. 데이터 가져오기 ---------
-
 kor_raw <- read_excel("data/도시지역_인구현황_시군구__20240331111602.xlsx", sheet="데이터", skip=0) 
 
 # 2. 데이터 전처리 ---------
@@ -112,11 +133,12 @@ kor_tbl
 
 ## 문제 파악 {#r-population-by-sigun-problem}
 
-대한민국 시군구이 `r kor_tbl |> count(시도명, 시군구) |> nrow()` 이기 때문에 인구변동이 많은 시군을 추출하기 위해서 
-수도권 시군구는 백만명 근처이고 가장 작은 울릉군은 2016년 기준 10,001 명이라 편차가 매우 크다.
-따라서, 이를 시각화를 하게 되면 문제점이 한눈에 파악된다.
+대한민국 시군구이 `r kor_tbl |> count(시도명, 시군구) |> nrow()` 이기
+때문에 인구변동이 많은 시군을 추출하기 위해서 수도권 시군구는 백만명
+근처이고 가장 작은 울릉군은 2016년 기준 10,001 명이라 편차가 매우 크다.
+따라서, 이를 시각화를 통해 확인하면 문제점이 한눈에 파악된다.
 
-``` {r}
+```{r}
 #| label: fig-population-growth-problem
 #| fig-cap: 전체 시군구 인구수 변화
 kor_tbl %>% 
@@ -131,30 +153,25 @@ kor_tbl %>%
 
 ## 문제해결 {#r-population-by-sigun-solution}
 
-이러한 문제점에 대해 가장 많이 활용되는 기법이 자료구조로 티블(tibble)을 도입하고,
-데이터 분석을 위한 방법으로 함수형 프로그래밍을 조합하는 것이다.
+이러한 문제점에 대해 가장 많이 활용되는 기법은 자료구조로 티블(tibble)을 도입하고, 데이터 분석을 위한 방법으로 함수형 프로그래밍을 조합하는 것이다.
 
-### 티블 자료구조 {#r-population-by-sigun-solution-tibble}
+데이터프레임을 기존 폭 넓은(wide) 형태에서 긴(long) 형태로 변환하고 이에 `nest()`를 적용하면 함수형 프로그래밍을 적용할 수 있는 자료구조가 된다. 
+더불어, 선형회귀모형을 각 시군별로 적용할 예정이므로 회귀모형 함수도 생성해 둔다.
 
-데이터프레임을 기존 폭넓은(wide) 형태를 긴(long) 형태로 변환하고 이를 `nest()`를 적용시키면
-함수형 프로그램을 적용시킬 수 있는 자료구조가 된다.
-더불어, 선형회귀모형을 각 시군별로 적용시킬 예정이라 회귀모형 함수도 생성시켜 둔다.
+그 다음 전체 시군별로 연도별 인구 변화를 회귀분석으로 수행하고, 그 결과를 `broom` 패키지 `tidy`, `glance`, `augment` 함수를 활용하여 데이터와 모형 분석 결과를 결합한다.
 
-그리고 나서 전체 시군별로 연도별 인구변화를 회귀분석으로 수행하여 수행결과를 `broom` 팩키지의
-`tidy`, `glance`, `augment` 함수를 활용하여 데이터와 모형분석결과를 결합시킨다.
-
-``` {r}
+```{r}
 #| label: r-population-by-sigun-solution
 kor_sigun_tbl <- kor_tbl %>% 
   group_by(시도명, 시군구) %>% 
   nest()
 
-## 4.2. 모형 - 선형회귀모형
+## 선형회귀모형
 sigun_model <- function(df) {
   lm(인구수 ~ 연도, data=df)
 }
 
-## 4.3. 데이터 + 모형 결합
+## 데이터 + 모형 결합
 kor_sigun_mod <- kor_sigun_tbl %>% 
   mutate(model = map(data, sigun_model)) %>% 
   mutate(
@@ -172,14 +189,16 @@ kor_sigun_mod |>
   arrange(desc(결정계수))
 ```
 
-### 급/역 성장 시군 {#r-population-by-sigun-solution-rsquare}
+## 급/역 성장 시군 {#r-population-by-sigun-solution-rsquare}
 
-회귀분석 결정계수($R^2$)기준 인구가 연도별로 높은 상관관계를 갖는 시군과 그렇지 않는 상위 하위 5개 시군을 뽑아 시각화 해보자.
+회귀분석 결정계수($R^2$)기준 인구가 연도별로 높은 상관관계를 갖는 시군과
+그렇지 않는 상위 하위 5개 시군을 뽑아 시각화 해보자.
+회귀분석 결정계수($R^2$)기준과 회귀계수($\beta_1$)를 기준으로 상위
+5개, 하위 5개 시군을 뽑아 연도별 인구변화를 시각화한다.
 
-회귀분석 결정계수($R^2$)기준이 아닌 회귀계수($\beta_1$)를 기준으로 상위 5개, 하위 5개 시군을 뽑아 
-연도별 인구변화를 시각화해보자.
+인구가 꾸준히 증가하고 있는 시군구는 경기도 광주시, 남양주시, 양평군과 강원도 원주시, 충청남도 천안시다. 수도권 인근 지역이 많이 포함되어 있다. 반면, 인구가 꾸준히 감소하고 있는 시군구는 부산 영도구, 경상북도 경주시, 전라남도 보성군, 화순군, 충청북도 옥천군으로 확인되며 부산 영도구가 가장 뚜렷하게 인구가 감소하는 것으로 확인된다.
 
-``` {r}
+```{r}
 #| label: fig-population-growth-visualization
 #| fig-cap: 급성장, 역성장 시군구 인구수 변화 시각화
 
@@ -216,6 +235,31 @@ growth_sigun_tbl %>%
          y="인구수", 
          title="시군구 인구수 년도별 변화(2005 - 2022)") +
     scale_color_manual(values=c("역성장"="red", "급성장"="blue"))
+```
+
+반대로 회귀분석 결정계수($R^2$)가 낮은 시군구는 장기적인 인구변화를 예측하기 어렵다는 것을 의미한다. 따라서, 이러한 시군구는 인구변화에 대한 정책을 수립할 때 주의가 필요하다.
+
+```{r}
+#| label: fig-population-growth-visualization-rsquare
+#| fig-cap: 결정계수가 낮은 시군구 인구수 변화 시각화
+low_rsquare_sgg <- kor_sigun_mod %>% 
+  top_n(5, -결정계수) %>% 
+  unnest(data)
+
+## 결정계수 낮은 시군구 인구수 변화 시각화
+low_rsquare_sgg %>% 
+  mutate(연도 = make_date(year=연도)) %>% 
+  ggplot(aes(x=연도, y=인구수, color = 시군구, group=시군구)) +
+    geom_point() +
+    geom_line() +
+    theme_minimal() +
+    scale_y_log10(labels=scales::comma) +
+    scale_x_date(date_labels = "%y") +
+    theme(legend.position = "none") +
+    facet_wrap(~시군구, nrow=1, scale="fixed") +
+    labs(x=NULL, 
+         y="인구수", 
+         title="결정계수 낮은 시군구 인구수 년도별 변화(2005 - 2022)")
 ```
 
 
