--- a/models_building.qmd
+++ b/models_building.qmd
@@ -6,7 +6,7 @@ editor:
     wrap: 72
 ---
 
-# 모형 개발
+# 모형 개발 {#sec-model-building}
 
 기계학습은 다음 세가지 사항을 기반으로 하고 있다.
 패턴은 존재한다고 가정하는 부분에서 통계학의 회귀분석과 유사하나,
