--- a/models.qmd
+++ b/models.qmd
@@ -214,5 +214,14 @@ abline(h=0, type='3', col='blue')
 :::
 
 
+::: callout-note
+### `predict`와 `forecast` 차이
 
+`predict`와 `forecast`는 둘 다 '예측하다'라는 의미로 사용되지만, 
+차이는 명확하다. `predict`는 보다 확정적인 결과에 대한 예측에 초점을 맞추는 반면, `forecast`는 미래의 불확실한 사건에 대한 확률적인 추정에 중점을 둔다.
 
+`predict`는 과학, 사회학, 심리학 등에서 사용되ㅕ 일반적으로 특정 사건이나 결과가 일어날 것이라고 말하는 데 사용된다. 예를 들어, 기계학습 모형이 특정 데이터를 바탕으로 결과를 '예측(predict)'하는 경우가 대표적이다. 특정 조건이나 상황에서 특정 결과가 일어날 것이라고 하는, 비교적 구체적이고 확정적인 예측을 내포한다.
+
+반면, `forecast`는 주로 기상학, 경제학, 재무학 등에서 사용되며, 미래의 사건이나 조건에 대한 확률적인 추정을 의미한다. `forecast`는 불확실성과 확률적인 요소를 포함한 예측을 가리키며, 예를 들어 날씨 예보나 경제 성장률 예측 등에서 사용되기 때문에 특정 사건이 발생할 '가능성'이나 '확률'을 중시한다.
+
+:::
