--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,10 @@
+@book{coelho2015building,
+  title={Building machine learning systems with Python},
+  author={Coelho, Luis Pedro and Richert, Willi},
+  year={2015},
+  publisher={Packt Publishing Birmingham}
+}
+
 @article{Hardie2012,
   doi = {10.5130/ajceb.v9i1.3009},
   url = {https://doi.org/10.5130/ajceb.v9i1.3009},
