update many models

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,26 @@
+@book{rosling2019factfulness,
+  title={팩트풀니스: 우리가 세상을 오해하는 10가지 이유와 세상이 생각보다 괜찮은 이유},
+  author={로슬링, 한스},
+  translator={이창신},
+  publisher={김영사},
+  year={2019},
+  month={3},
+  day={10},
+  edition={1},
+  url={https://product.kyobobook.co.kr/detail/S000000597791}
+}
+
+
+@misc{ovando2018practical,
+  title={Data Wrangling and Model Fitting Using purrr},
+  author={Ovando, Dan},
+  url={https://www.weirdfishes.blog/blog/practical-purrr/},
+  year={2018},
+  month={Feb},
+  day={20}
+}
+
+
 @book{coelho2015building,
   title={Building machine learning systems with Python},
   author={Coelho, Luis Pedro and Richert, Willi},
